simpler fix for dropdown overlap

--- a/plugins/UsersManager/angularjs/paged-users-list/paged-users-list.component.less
+++ b/plugins/UsersManager/angularjs/paged-users-list/paged-users-list.component.less
@@ -53,7 +53,6 @@ piwik-paged-users-list {
     }
 
     .select-wrapper {
-      transform: scale(.8);
       width: 100px;
 
       input {
@@ -61,6 +60,7 @@ piwik-paged-users-list {
         padding-bottom: .3em;
         height: 1em;
         line-height: 1em;
+        font-size: 13px;
       }
 
       span.caret {
